Change a path to WASM binary in JS-test according to `build` directory created by `build_wasm_beekeeper.sh` script

--- a/programs/beekeeper/beekeeper_wasm/beekeeper_wasm_test/beekeeper_wasm_test.html
+++ b/programs/beekeeper/beekeeper_wasm/beekeeper_wasm_test/beekeeper_wasm_test.html
@@ -183,7 +183,7 @@
       }
     };
   </script>
-  <script src="../build/beekeeper_wasm.js"></script>
+  <script src="../../../../build_wasm/beekeeper_wasm.js"></script>
 
   <div>Look to the console tab (developer tools)...</div>
 </body>
