Fix in `beekeeper_wasm_test` test

--- a/programs/beekeeper/beekeeper_wasm/beekeeper_wasm_test/beekeeper_wasm_test.html
+++ b/programs/beekeeper/beekeeper_wasm/beekeeper_wasm_test/beekeeper_wasm_test.html
@@ -12,8 +12,27 @@
           if(err) return console.log(err);
           console.log('file deleted successfully');
         });
+      }
+      catch(error)
+      {
+        console.error(error)
+      }
 
+      try
+      {
         FS.unlink("/storage_root/.beekeeper/wallet_b.wallet",function(err){
+          if(err) return console.log(err);
+          console.log('file deleted successfully');
+        });
+      }
+      catch(error)
+      {
+        console.error(error)
+      }
+
+      try
+      {
+        FS.unlink("/storage_root/.beekeeper/wallet_created_by_implicit_token.wallet",function(err){
           if(err) return console.log(err);
           console.log('file deleted successfully');
         });
