Remove `sig_digest` parameter from `sign_transaction` endpoint. Add `sign_binary_transaction` endpoint

--- a/programs/beekeeper/beekeeper_wasm/beekeeper_wasm_test/beekeeper_wasm_test.html
+++ b/programs/beekeeper/beekeeper_wasm/beekeeper_wasm_test/beekeeper_wasm_test.html
@@ -178,7 +178,7 @@
       console.log('got signature:')
       console.log(signature_00)
       console.log('************************sign transaction************************');
-      var signature_00 = instance.sign_transaction( session_token, transaction_body, chain_id, public_key, sig_digest )
+      var signature_00 = instance.sign_transaction( session_token, transaction_body, chain_id, public_key )
       console.log('expected signature:')
       console.log('1f17cc07f7c769073d39fac3385220b549e261fb33c5f619c5dced7f5b0fe9c0954f2684e703710840b7ea01ad7238b8db1d8a9309d03e93de212f86de38d66f21')
       console.log('got signature:')
@@ -195,7 +195,7 @@
       console.log('got signature:')
       console.log(signature_00)
       console.log('************************sign transaction************************');
-      var signature_00 = instance.sign_transaction( session_token, transaction_body, chain_id, public_key, sig_digest )
+      var signature_00 = instance.sign_transaction( session_token, transaction_body, chain_id, public_key )
       console.log('expected signature:')
       console.log('1f69e091fc79b0e8d1812fc662f12076561f9e38ffc212b901ae90fe559f863ad266fe459a8e946cff9bbe7e56ce253bbfab0cccdde944edc1d05161c61ae86340')
       console.log('got signature:')
