--- a/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
+++ b/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
@@ -13,6 +13,7 @@
       }
     }
   </script>
+  <script src="/__tests__/assets/run_node_helper.js"></script>
   <script type="module">
     import BeekeeperModule from '@hive/beekeeper';
 
@@ -20,6 +21,28 @@
       beekeeper: {
         get() {
           return BeekeeperModule;
+        }
+      },
+      assert: {
+        get() {
+          return {
+            equal(lhs, rhs, msg) {
+              if(lhs !== rhs)
+                throw new Error(msg || "lhs !== rhs");
+            },
+            ok(val, msg) {
+              if(!val)
+                throw new Error(msg || "val is falsy");
+            },
+            throws(fn, error) {
+              try {
+                fn();
+                return false;
+              } catch (error) {
+                return error instanceof Error;
+              }
+            }
+          };
         }
       }
     });
