Add beekeeper factory

--- a/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
+++ b/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
@@ -9,7 +9,7 @@
   <script type="importmap">
     {
       "imports": {
-        "@hive/beekeeper": "/build/beekeeper.mjs"
+        "@hive/beekeeper": "/build/beekeeper_wasm.js"
       }
     }
   </script>
