Replace old beekeeper factory with the new one

--- a/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
+++ b/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
@@ -10,8 +10,7 @@
     {
       "imports": {
         "@hive/beekeeper": "/build/beekeeper_wasm.js",
-        "@hive/beekeeperfactory": "/dist/index.js",
-        "@hive/beekeeperfactory2": "/dist/detailed/index.js"
+        "@hive/beekeeperfactory": "/dist/index.js"
       }
     }
   </script>
@@ -19,7 +18,6 @@
   <script type="module">
     import BeekeeperModule from '@hive/beekeeper';
     import beekeeperFactory from '@hive/beekeeperfactory';
-    import beekeeperFactory2 from '@hive/beekeeperfactory2';
 
     Object.defineProperties(window, {
       beekeeper: {
@@ -30,11 +28,6 @@
       factory: {
         get() {
           return beekeeperFactory;
-        }
-      },
-      factory2: {
-        get() {
-          return beekeeperFactory2;
         }
       },
       assert: {
