Use packed package in beekeeper tests on CI

--- a/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
+++ b/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
@@ -10,7 +10,7 @@
     {
       "imports": {
         "@hive/beekeeper": "/build/beekeeper_wasm.js",
-        "@hive/beekeeperfactory": "/dist/index.js"
+        "@hive/beekeeperfactory": "/dist/bundle/index.js"
       }
     }
   </script>
