--- a/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
+++ b/programs/beekeeper/beekeeper_wasm/__tests__/assets/test.html
@@ -9,8 +9,8 @@
   <script type="importmap">
     {
       "imports": {
-        "@hive/beekeeper": "/build/beekeeper_wasm.js",
-        "@hive/beekeeperfactory": "/dist/bundle/index.js"
+        "@hive/beekeeper": "/build/beekeeper_wasm.web.js",
+        "@hive/beekeeperfactory": "/dist/bundle/web.js"
       }
     }
   </script>
